# HapNe

./: .flake8  .gitignore  README.md  conda_environment.yml  read_me.md  setup.cfg  setup.py
.github/workflow/: python-package-conda.yml
src/hapne/: __init__.py  fit.py  ibd.py  ld.py  output.py  utils.py
src/hapne/backend/: DemographicHistory.py  DemographicHistory2StatsModelAdapter.py  HapNe.py  IO.py  StatsModel.py
src/hapne/convert/: __init__.py  tools.py
src/hapne/convert/mathii_scripts/: LICENSE  py3Eigenstrat.py
src/hapne/files/: readme.txt  regions_grch37.txt  regions_grch38.txt
tests/: test_build_hist.py  test_compute_ld.py  test_hapne.py  test_time_het.py
tests/files/: const.ini  const_hapne_ibd.ini  const_hapne_ibd_fixed.ini  const_hapne_ld.ini  const_hapne_ld_fixed.ini  samples.age
tests/files/const/: chr1.from143199864.to249222527.bed  chr1.from143199864.to249222527.bim  chr1.from752721.to121475791.bed  chr1.from752721.to121475791.bim
tests/files/const_ld_time_het/: offset_10.times
tests/files/const_ld_time_het/LD/: Const.ccld  chr1.from143199864.to249222527.r2  chr1.from752721.to121475791.r2  chr10.from42423532.to135440226.r2  chr10.from93502.to39074656.r2  chr11.from193146.to51562420.r2  chr11.from54710133.to134945120.r2  chr12.from190980.to34827687.r2  chr12.from37858073.to133831319.r2  chr13.from19020095.to115103150.r2  chr14.from19264875.to107287663.r2  chr15.from20044342.to102397317.r2  chr16.from46501717.to90170095.r2  (+27 more)
tests/files/const_ld_time_het_2/: offset_2.times
tests/files/const_test_ibd/: test.ibd.hist
(+120 files in other folders)
