[metadata]
name = hapne
version = 1.20240807
author = Romain Fournier
description = Haplotype-based inference of recent effective population size in modern and ancient DNA samples
long_description = file: read_me.md
long_description_content_type = text/markdown
url = https://github.com/PalamaraLab/HapNe
project_urls =
    Bug Tracker = https://github.com/PalamaraLab/HapNe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Unix
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas_plink
    pandas
    scipy
    matplotlib
    numba
    scikit-learn

[options.extras_require]
dev = pytest; flake8
pypi = build; twine

[options.packages.find]
where = src

[options.package_data]
hapne = files/regions_grch37.txt, files/regions_grch38.txt
